# minsim

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  litellm.config.yaml  pyproject.toml
.githooks/: pre-commit
config/: model_prices.json
docs/: api-result-schema.md  data-spec.md  design-qa-checklist.md  prd.md  simulation-addition-checklist.md  simulation-outputs.md
evals/: run_agent_eval.py  run_creative_fixture_eval.py  run_result_envelope_fixture_eval.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
scripts/: bootstrap_worktree.sh  check_ai_agent_e2e.py  check_ai_agent_live_litellm_langfuse.py  check_cloudflare_access.py  check_cloudflare_tunnel.py  check_local_services.py  check_mac_studio_production.py  check_persona_simulation_benchmark.py  check_protected_demo_readiness.py  check_public_external_demo.py  check_public_tree_hygiene.py  configure_cloudflare_access.py  download_dataset.py  explore_dataset.py  import_dgist_personas.py  install_git_hooks.sh  manage_user_quota.py  probe_llm_rate_limits.py  report_token_costs.py  run_agent_browser_e2e.sh  run_agent_browser_e2e_matrix.sh  run_ai_agent_theme_api_report.py  run_e2e_server.py  run_local_upstage_e2e.py  run_worker.py  seed_demo_result.py  validate_phase5_phase7.py  verify.py
src/: config.py
tests/: conftest.py  test_agent_simulator.py  test_ai_agent_e2e_check.py  test_api_app.py  test_api_auth.py  test_api_onboarding.py  test_api_schemas.py  test_autofill_notes_humanize.py  test_autofill_web_search.py  test_calibration.py  (+60 more)
(+264 files in other folders)
