[project]
name = "koresim"
version = "0.1.0"
description = "Korean AI Human Behavior Simulation Platform"
requires-python = ">=3.13"
dependencies = [
    "polars>=1.0.0",
    "pyarrow>=15.0.0",
    "datasets>=2.20.0",
    "huggingface-hub>=0.23.0",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "openai>=1.30.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "pandas>=2.2.0",
    "redis>=7.4.0",
    "rq>=2.8.0",
    "langgraph>=1.1.10",
    "langfuse>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.4.0",
    "ipython>=8.0.0",
    "fakeredis>=2.35.1",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.coverage.run]
source = [
    "src/api",
    "src/jobs",
    "src/runtime",
    "src/simulations",
    "src/agent",
    "src/llm",
    "src/orchestration",
    "src/serper",
]

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
